--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.0.5
   uuid: ^3.0.7
   flutter_riverpod: ^2.3.6
+  image_picker: ^1.0.0
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
