--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   uuid: ^3.0.7
   flutter_riverpod: ^2.3.6
   image_picker: ^1.0.0
-  location: ^4.4.0
+  location: ^5.0.0
+  http: ^1.1.0
+  google_maps_flutter: ^2.3.1
 
 dev_dependencies:
   flutter_test:
